# ZAMP

./: .gitignore  CMakeLists.txt  Makefile  README.md  opis_dzialan.txt
config/: config.xml
inc/: AbstractComChannel.hh  AbstractMobileObj.hh  AbstractScene.hh  ComChannel.hh  Configuration.hh  Cuboid.hh  CuboidConfig.hh  LibraryInterface.hh  ProgramInterpreter.hh  Scene.hh  Set4LibInterfaces.hh  Vector3D.hh  preprocesor.hh  xmlinterp.hh
plugin/: CMakeLists.txt  Makefile
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
src/: ComChannel.cpp  LibraryInterface.cpp  ProgramInterpreter.cpp  Scene.cpp  Set4LibInterfaces.cpp  main.cpp  preprocesor.cpp  xmlinterp.cpp
